Added Role Based Authentication [Pending: No Error Message Displayed For Bad Token :: Status -> 200 OK]